--- a/style.css
+++ b/style.css
@@ -8,3 +8,4 @@ h1 {
     color: rgb(33, 31, 31); /////// Adicionei um ponto e vírgula no final da linha 
     font-size: 20px; ///////// Adicionei um ponto e vírgula no final da linha 
     background-color: #489ce1;
+}
